# quicord-rs

./: Cargo.toml  README.ja.md  README.md
quicord-rs/: Cargo.toml
quicord-rs-macros/: Cargo.toml
quicord-rs-macros/src/: args.rs  expand.rs  lib.rs
quicord-rs-main/: Cargo.toml
quicord-rs-main/src/: lib.rs
quicord-rs-main/src/command/: context.rs  message_component.rs  mod.rs  modal.rs  scope.rs  slash.rs
quicord-rs-main/src/core/: client.rs  event.rs  interaction.rs  mod.rs
quicord-rs-main/src/util/: logger.rs  mod.rs  static_router.rs
quicord-rs/examples/: README.md  add.rs  button.rs  ping.rs  ready.rs
quicord-rs/src/: lib.rs
