[package]
name = "quicord-rs-macros"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A Rust library for creating Discord bots"
repository = "https://github.com/Yu-yu0202/quicord-rs"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
