[package]
name = "quicord-rs-main"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "A Rust library for creating Discord bots"
repository = "https://github.com/Yu-yu0202/quicord-rs"
readme = "../README.md"

[dependencies]
anyhow = "1.0.102"
futures-util = "0.3.32"
linkme = "0.3.36"
rustls = { version = "0.23.40", features = ["ring"] }
rustc-hash = "2.1.2"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
twilight-gateway = "0.17.1"
twilight-http = { version = "0.17.1" }
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing = "0.1.44"
